# MaxDB_GPL_Releases

./: README.md
7.6.00.37/TOOLSRC/: Makefile.in  basescripts.mk.in  config.guess  configure  configure.ac  devconfig.h.in  envexec  makedirs.mk.in
7.6.00.37/TOOLSRC/licence/: gpl-short.txt  lesser-short.txt
7.6.00.37/TOOLSRC/sys/desc/: APODev.com  APODevProfiles.mac  APODevTools.mac  Build.mac  BuildPackage.com  Extra  GetBuildNr.lnk  ICopy.mac  InstDev.lnk  Nachtmake.mac  Net.com  P4Tools.mac  PerlLibSDB.mac  PutBuildPrt.lnk  Python.com  RemMakeTools.mac  SAPDB.com  XML2DiscCpp.lnk  XML2LcaCode.lnk  XMLMerge.lnk  admintools.mac  alltools.mac  astyle.com  binaries.mac  bison.mac  buildpackage.mac  check.lnk  checktools.mac  clusterinc.mac  compscripts.mac  cpcreg.lnk  cpctest.mac  cppdoc.mac  ct.com  data.com  dbmtools.mac  demodb.com  diffTools.mac  distribTools.mac  docTools.mac  (+79 more)
7.6.00.37/TOOLSRC/sys/desc/APODev/: profiles.com
7.6.00.37/TOOLSRC/sys/desc/BuildPackage/: LCPool.com
7.6.00.37/TOOLSRC/sys/desc/Net/: FTP.com
7.6.00.37/TOOLSRC/sys/desc/Perl/: Mail.com
7.6.00.37/TOOLSRC/sys/desc/Perl/libwww-perl/: lib.com
7.6.00.37/TOOLSRC/sys/desc/Python/: FOM.com  bin.com  daemon.com  diffTools.com  distribTools.com  docTools.com  glue.com  perforce.com  powertoys.com  ptoc.com  sniff.com  sql.com  testTools.com  tkinterLib.com  vmake.com  wxPythonLib.com  xmls.com
7.6.00.37/TOOLSRC/sys/desc/Python/testTools/: QACC.com
7.6.00.37/TOOLSRC/sys/desc/Python/xmls/: FOM.com
7.6.00.37/TOOLSRC/sys/desc/SAPDB/: Perforce.com
7.6.00.37/TOOLSRC/sys/desc/base/: MakedefsUNIX.com
7.6.00.37/TOOLSRC/sys/desc/base/MakedefsUNIX/: Makedefs.mac
7.6.00.37/TOOLSRC/sys/desc/data/: distribTools.com  licence.com
7.6.00.37/TOOLSRC/sys/desc/doxygen/: dot.com
7.6.00.37/TOOLSRC/sys/desc/dsp2vmake/: bin.com
7.6.00.37/TOOLSRC/sys/desc/idl/: XML2DiscCpp.com  XML2LcaCode.com  XMLMerge.com  expat.com  idl2xml.com  xml2ispc.com
7.6.00.37/TOOLSRC/sys/desc/mftools/: mfspl.lnk
7.6.00.37/TOOLSRC/sys/desc/tt/: Binaries.com  Build.com  CheckTools.com  ICopy.com  MSDEV.com  Perforce.com  Perl.com  bison.com  cpan.mac  factory.com  flex.com  jre.com  md5sum.com  smb.com  specials.com  vmake.com
7.6.00.37/TOOLSRC/sys/src/APODev/: ApoDev.pl  LCAMakePreCheck.pm  PerforceEnv.pm  checkTools.mac  checklcmake.pl  createLCPoolLink.pl  createProfile.pl  lcmake.pm  make_what.pl
7.6.00.37/TOOLSRC/sys/src/BuildPackage/: Hosts.pm  LCPool.pm  Old.pm  PackDefs.pm  PackZip.pm  PatchSar.pm  Version.pm  WinLink.pm  check_lca_ramp.pl  listpackages.pl
7.6.00.37/TOOLSRC/sys/src/Cluster/: Cluster.com
7.6.00.37/TOOLSRC/sys/src/Globals/: Globals.com
7.6.00.37/TOOLSRC/sys/src/Profiles/: .iprofile  Profiles.com  iprofile.bat
7.6.00.37/TOOLSRC/sys/src/Python/: DevStudio.py  VmakeServer.pyd  acquisition.py  dynamicModule.py  fileutil.py  internalMail.py  pack.py
7.6.00.37/TOOLSRC/sys/src/astyle/: ASBeautifier.cpp  ASFormatter.cpp  ASResource.cpp  astyle.dsp  astyle.dsw  astyle.h  astyle_main.cpp
7.6.00.37/TOOLSRC/sys/src/base/: Makedefs.in  Makefile.in  createLinks  createToolLinks.py
7.6.00.37/TOOLSRC/sys/src/config/: ToolRelease.info
7.6.00.37/TOOLSRC/sys/src/ct/: vct00  vct01  vct02  vct03  vct04  vct05c  vct11  vct12  vct13  vct14  vct15  vct21  vct37c  vct41  vct44  vct45  vct64
7.6.00.37/TOOLSRC/sys/src/data/: alias.txt  file2developer.txt  relinfo.patch
7.6.00.37/TOOLSRC/sys/src/demodb/: DEMO.ins  DEMO.py  DESC.002  DESC.004  DESC.006  DESC.008  DESCRIPTION.LONG  PIC.001  PIC.002  PIC.003  PIC.004  PIC.005  PIC.006  PIC.007  PIC.008  PICTURE.LONG  REQUEST.001  REQUEST.005  REQUEST.LONG  ehot30.dsc  ehot60.dsc  ehot90.dsc  ehotel.dsc
7.6.00.37/TOOLSRC/sys/src/dsp2vmake/: dsp2vmake.htm
7.6.00.37/TOOLSRC/sys/src/eo/: veo002c  veo004c  veo005c  veo00c  veo00mc  veo00xc  veo02uc  veo06c  veo11uc  veo13uc
7.6.00.37/TOOLSRC/sys/src/intranetTools/: lsSchedule.cpp
7.6.00.37/TOOLSRC/sys/src/os/: vos00c  vos00cmc  vos00cnc  vos00dc  vos00dsc  vos00mc  vos00spc  vos00vc  vos00xsc  vos01c  vos01cc  vos01ic  vos01uc  vos02c  vos02uc  vos03c  vos03uc  vos04u  vos04uc  vos05uc  vos06c  vos06uc  vos07uc  vos08uc  vos09c  vos09uc  vos10uc  vos11c  vos11uc  vos12uc  vos13uc  vos14uc  vos17uc  vos18uc  vos21uc  vos23c  vos24uc  vos33c  vos33oc  vos40c  (+36 more)
7.6.00.37/TOOLSRC/sys/src/sp/: vsp00  vsp001  vsp001c  vsp002  vsp002c  vsp003  vsp003c  vsp004  vsp004c  vsp005  vsp005c  vsp006  vsp007  vsp008  vsp009c  vsp00c  vsp10c  vsp31c  vsp32  vsp32c
7.6.00.37/TOOLSRC/sys/src/tt/: BuildPackageNew.pm.tt  BuildPackageOld.pm.tt  CCVers.pm.tt  CPCTest.pm.tt  CompTest.py.ty  ComponentTest.py.tyl  CreateProfDB.pl.ta  CreateUserDB.pl.ta  DBTools.pm.tt  DBTools.pm.tt.SAVE  DelNullSrc.py.ta  DelPutBckps.py.ta  GETDBCOM.bat.tt  GETDBMGUI.bat.tt  GETFLOAD.bat.tt  GETPTS.bat.tt  GETPTSADMIN.bat.tt  GETSQLSTDO.bat.tt  GME_XMLElem.pm.tt  GME_XMLPars.pm.tt  GetBuildNr.exe.tp  GetBuildPrt.exe.tp  GetFilePath.pl.tt  GetFilesFromCDImages.pm.tt  GetInstDir.pm.tt  GetInstRuntimeDir.pm.tt  GetTaskTrace.pl  ICopy.pm.tt  IO_SMB.pm.tt  IfaGetProtDir.pl.tt  IfaTest.pl.tt  IniConf.pm.tt  InstallDevStudio.c  JDiagGUI.jar.tt  Koeln.pl.tt  KonvertStoredProcs.pl.tt  LineOfCode.pl.ta  Nthandle.exe.tp  OSRTE.pm.tt  PCConf.pm.tt  (+368 more)
(+12030 files in other folders)
